# linetime

./: .gitmodules  README.md
case/back-panel/: back-panel.dxf  back-panel.slvs  export.dxf
case/front-panel/: export.dxf  front_panel.dxf  front_panel.slvs
case/lcd-bracket/: bracket.slvs  bracket.slvs~  bracket.stl
firmware/: Makefile  README.md  STM32F767ZI.ld  board.c  board.h  board.yaml  board_STM32LTDC.h  chconf.h  chibios_dac_fix.patch  chibios_mac_dsb.patch  cs2100.c  cs2100.h  ffconf.h  gfxconf.h  gui.c  gui.h  halconf.h  lcd.c  lcd.h  lwipopts.h  main.c  mains.c  mains.h  mandelbrot.c  mandelbrot.h  mcuconf.h  measurements.c  measurements.h  microsd.c  microsd.h  network.c  network.h  rom.c  rom.h  sine.py  speaker.c  speaker.h  todo  ublox.c  ublox.h
firmware/diyeth/: Makefile  STM32F767ZI.ld  board.c  board.h  compare.py  halconf.h  main.c  netudp.py  pktlog  pktout
hardware/: linetime-cache.lib  linetime.bom  linetime.kicad_pcb  linetime.pro  linetime.sch  linetime.xml  linetime_battery.sch  linetime_ethernet.sch  linetime_gps.sch  linetime_mains.sch  linetime_ui.sch  r1_notes.md
hardware/gerbers/: linetime-B.Cu.gbl  linetime-B.Mask.gbs  linetime-B.SilkS.gbo  linetime-Edge.Cuts.gml  linetime-F.Cu.gtl  linetime-F.Mask.gts  linetime-F.SilkS.gto  linetime.drl
hardware/sims/: mains_lpf.csv  mains_lpf.spice
rfw/: .gitignore  Cargo.toml  memory.x  pyocd.yaml
rfw/src/: main.rs
software/demo/: count_cycles.py  view.py
