[package]
name = "linetime"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-ramdump = "0.1.1"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.3"
tinytga = {version="0.3.2", features=["graphics"]}

[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal"
features = ["stm32f767", "rt"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
